--- a/index.htm
+++ b/index.htm
@@ -603,6 +603,115 @@
             <!-- Foto -->
             <section id="foto" class="bg-white rounded-xl p-8 shadow-sm border border-slate-200 section-hidden">
                 <h2 class="text-xl font-semibold mb-6 text-slate-800 uppercase tracking-wider">📸 Galleria Foto</h2>
+                <div class="space-y-4">
+                    <div class="bg-blue-50 rounded-xl p-4 border border-blue-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">✈️ Giorno 1 - Arrivo a Negombo</h3>
+                        <a href="https://photos.google.com/u/0/album/AF1QipNvx6MMJ-buVXYJdZcfT0449p5KX9pNbctJecfy?hl=it" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 1
+                        </a>
+                    </div>
+                    
+                    <div class="bg-emerald-50 rounded-xl p-4 border border-emerald-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🏰 Giorno 2 - Galle</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-amber-50 rounded-xl p-4 border border-amber-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🐘 Giorno 3 - Udawalawe National Park</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-violet-50 rounded-xl p-4 border border-violet-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🚂 Giorno 4 - Ella</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-teal-50 rounded-xl p-4 border border-teal-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🍃 Giorno 5 - Distretto di Nuwara Eliya</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-blue-50 rounded-xl p-4 border border-blue-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">👑 Giorno 6 - Kandy</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-emerald-50 rounded-xl p-4 border border-emerald-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🏛️ Giorno 7 - Dambulla</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-amber-50 rounded-xl p-4 border border-amber-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🦁 Giorno 8 - Sigiriya e Polonnaruwa</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-violet-50 rounded-xl p-4 border border-violet-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🏖️ Giorno 9 - Trincomalee/Pasikudah</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-teal-50 rounded-xl p-4 border border-teal-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🏖️ Giorno 10 - Trincomalee/Pasikudah</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-blue-50 rounded-xl p-4 border border-blue-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">🏛️ Giorno 11 - Anuradhapura</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+
+                    <div class="bg-emerald-50 rounded-xl p-4 border border-emerald-100">
+                        <h3 class="font-semibold text-slate-800 mb-3">✈️ Giorno 12 - Negombo/Colombo - Partenza</h3>
+                        <a href="#" 
+                           target="_blank" 
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
+                            📷 Album in arrivo...
+                        </a>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
@@ -734,5 +843,5 @@
             // Keep all sections hidden since we're using modals now
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'969e48728191ed2b',t:'MTc1NDMxMjkwMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'969e5126334ff940',t:'MTc1NDMxMzI1OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
