--- a/index.htm
+++ b/index.htm
@@ -335,8 +335,10 @@
                             <p class="text-slate-600">Rupia dello Sri Lanka (LKR) 💰</p>
                         </div>
                         <div class="bg-violet-50 rounded-xl p-4 border border-violet-100">
-                            <h4 class="font-medium text-slate-800 mb-2">🌡️ Clima</h4>
-                            <p class="text-slate-600">Tropicale ☀️, 26-30°C. Ad agosto: costa ovest stagione secca 🌤️, costa est possibili piogge 🌧️</p>
+                            <h4 class="font-medium text-slate-800 mb-2">🌡️ Clima ad Agosto</h4>
+                            <p class="text-slate-600 mb-2">Agosto è considerato un mese di transizione, il che significa che alcune aree sono più secche e accessibili rispetto ad altre.</p>
+                            <p class="text-slate-600 mb-2"><strong>Temperature:</strong> Le temperature variano generalmente tra i 25°C e i 30°C, con un clima tropicale caldo e umido in gran parte dell'isola.</p>
+                            <p class="text-slate-600"><strong>Precipitazioni:</strong> Ad agosto, il monsone di sud-ovest interessa principalmente le coste occidentali e meridionali, portando piogge moderate. Tuttavia, il lato orientale e nord-orientale dell'isola presenta un clima più asciutto e favorevole per il turismo balneare.</p>
                         </div>
                     </div>
                 </div>
@@ -843,5 +845,6 @@
             // Keep all sections hidden since we're using modals now
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'969e5126334ff940',t:'MTc1NDMxMzI1OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'969ecda172f0b260',t:'MTc1NDMxODM1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
