--- a/index.htm
+++ b/index.htm
@@ -424,55 +424,69 @@
 
             <!-- Packing List -->
             <section id="packing" class="bg-white rounded-xl p-8 shadow-sm border border-slate-200 section-hidden">
-                <h2 class="text-xl font-semibold mb-6 text-slate-800 uppercase tracking-wider">🎒 Packing List</h2>
+                <h2 class="text-xl font-semibold mb-6 text-slate-800 uppercase tracking-wider">🎒 SRI LANKA 360° - CHECKLIST BAGAGLIO</h2>
+                
+                <div class="bg-blue-50 rounded-xl p-6 mb-6 border border-blue-100">
+                    <p class="text-slate-600 mb-3">Alcuni elementi in lista chiaramente sono consigliati e non obbligatori, soprattutto per quanto riguarda le quantità: vi comunico un numero adeguato per facilitarvi nel momento valigia, ma ovviamente è tutto molto personale! 😊</p>
+                    <p class="text-slate-600 mb-3">Sicuramente, consiglio per esperienza di non caricare troppo lo zaino, perché gireremo tanto e faremo fatica a trasportare ma anche a trovare tutto ogni volta che dovremo fare e disfare la valigia. 😁</p>
+                    <p class="text-slate-600 mb-3">Vi consiglio anche di utilizzare delle sacche per suddividere i vari indumenti/oggetti in modo appunto da trovarli subito tra una tappa e l'altra.</p>
+                    <p class="text-slate-600 font-medium">È fortemente consigliato (in teoria mezzo obbligatorio) utilizzare uno zaino come bagaglio. 🎒</p>
+                </div>
+
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="bg-amber-50 rounded-xl p-6 border border-amber-100">
-                        <h3 class="font-semibold text-slate-800 mb-4">Abbigliamento</h3>
+                        <h3 class="font-semibold text-slate-800 mb-4">👕 Abbigliamento</h3>
                         <ul class="text-slate-600 space-y-2">
-                            <li>• T-shirt leggere (5-6)</li>
-                            <li>• Pantaloni lunghi leggeri (2-3)</li>
-                            <li>• Shorts (3-4)</li>
-                            <li>• Costume da bagno (2)</li>
-                            <li>• Felpa leggera per la sera</li>
-                            <li>• Scarpe da trekking</li>
-                            <li>• Infradito/sandali</li>
-                            <li>• Cappello/bandana</li>
+                            <li>• Magliette leggere (evita abbigliamento troppo scoperto nei siti religiosi) <span class="font-medium">{5-7}</span></li>
+                            <li>• Pantaloni leggeri o gonne lunghe (per cultura e trekking) <span class="font-medium">{2-3}</span></li>
+                            <li>• Pantaloncini leggeri (ad es. per spiaggia) <span class="font-medium">{2}</span></li>
+                            <li>• Giacca leggera e/o felpa per le mattine e serate più fresche</li>
+                            <li>• Impermeabile o poncho (per eventuali pioggerelle)</li>
+                            <li>• Sarong o simili (copertura per templi)</li>
+                            <li>• Costumi da bagno + teli da spiaggia</li>
+                            <li>• Calzini (utili anche per la visita ai templi dove bisogna stare scalzi)</li>
                         </ul>
                     </div>
-                    <div class="bg-violet-50 rounded-xl p-6 border border-violet-100">
-                        <h3 class="font-semibold text-slate-800 mb-4">Essenziali</h3>
-                        <ul class="text-slate-600 space-y-2">
-                            <li>• Passaporto + copie</li>
-                            <li>• Assicurazione viaggio</li>
-                            <li>• Crema solare SPF 50+</li>
-                            <li>• Repellente zanzare</li>
-                            <li>• Kit primo soccorso</li>
-                            <li>• Powerbank</li>
-                            <li>• Adattatore universale</li>
-                            <li>• Borraccia</li>
-                        </ul>
-                    </div>
-                    <div class="bg-teal-50 rounded-xl p-6 border border-teal-100">
-                        <h3 class="font-semibold text-slate-800 mb-4">Farmaci</h3>
-                        <ul class="text-slate-600 space-y-2">
-                            <li>• Antidiarroico</li>
-                            <li>• Paracetamolo/Ibuprofene</li>
-                            <li>• Fermenti lattici</li>
-                            <li>• Farmaci contro la nausea</li>
-                            <li>• Cerotti e disinfettante</li>
-                            <li>• Farmaci personali</li>
-                        </ul>
-                    </div>
+                    
                     <div class="bg-emerald-50 rounded-xl p-6 border border-emerald-100">
-                        <h3 class="font-semibold text-slate-800 mb-4">Elettronica</h3>
+                        <h3 class="font-semibold text-slate-800 mb-4">👟 Scarpe e Accessori da Trekking</h3>
                         <ul class="text-slate-600 space-y-2">
-                            <li>• Smartphone + caricatore</li>
-                            <li>• Fotocamera</li>
-                            <li>• Cuffie</li>
-                            <li>• Powerbank</li>
-                            <li>• Cavi USB</li>
+                            <li>• Scarpe da trekking o comunque comode per camminare (meglio se non nuovissime 😅 meno rischio vesciche)</li>
+                            <li>• Sandali e/o infradito per la spiaggia o docce/hotel</li>
+                            <li>• Eventualmente scarpe impermeabili per le escursioni in corsi d'acqua</li>
                         </ul>
                     </div>
+
+                    <div class="bg-violet-50 rounded-xl p-6 border border-violet-100">
+                        <h3 class="font-semibold text-slate-800 mb-4">☀️ Protezione Solare e Repellenti</h3>
+                        <ul class="text-slate-600 space-y-2">
+                            <li>• Crema solare (SPF 30+ o più)</li>
+                            <li>• Cappello o cappellino</li>
+                            <li>• Repellente per insetti (ad es. Jungle)</li>
+                        </ul>
+                    </div>
+
+                    <div class="bg-teal-50 rounded-xl p-6 border border-teal-100">
+                        <h3 class="font-semibold text-slate-800 mb-4">🎒 Varie ed Eventuali</h3>
+                        <ul class="text-slate-600 space-y-2">
+                            <li>• Zainetto per escursioni</li>
+                            <li>• Torcia per le escursioni mattutine o serali</li>
+                            <li>• Medicine di base: analgesici, antidiarroici, antistaminici, farmaci contro la nausea</li>
+                            <li>• Cerotti</li>
+                            <li>• Gel igienizzante mani</li>
+                            <li>• Caricabatterie, power bank</li>
+                            <li>• Adattatore universale: in Sri Lanka si usano prese tipo G a 230 V / 50 Hz. In particolare in alcune zone può essere necessario l'adattatore BS546</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="bg-blue-50 rounded-xl p-6 mt-6 border border-blue-100">
+                    <h3 class="font-semibold text-slate-800 mb-4">📋 Documenti</h3>
+                    <ul class="text-slate-600 space-y-2">
+                        <li>• Passaporto (con visto), copie digitali dei propri documenti</li>
+                        <li>• Visto</li>
+                        <li>• Arrival Card</li>
+                    </ul>
                 </div>
             </section>
 
@@ -845,6 +859,5 @@
             // Keep all sections hidden since we're using modals now
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'969ecda172f0b260',t:'MTc1NDMxODM1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'969edf06d2371575',t:'MTc1NDMxOTA2OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
-
