--- a/index.htm
+++ b/index.htm
@@ -2175,14 +2175,15 @@
                 <div class="bg-amber-50 rounded-xl p-6 mb-6 border border-amber-100">
                     <h3 class="font-semibold text-slate-800 mb-3">📝 Comunica le tue esigenze alimentari</h3>
                     
-                    <div class="bg-white rounded-xl p-4 border border-amber-200">
+                    <div class="bg-white rounded-xl p-2 md:p-4 border border-amber-200">
                         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScgiBdKXEHsksA3bmvRaT4oHxT829XlyjG6SO9Q5hrLTr4Ogg/viewform?embedded=true" 
                                 width="100%" 
-                                height="686" 
+                                height="500" 
                                 frameborder="0" 
                                 marginheight="0" 
                                 marginwidth="0"
-                                class="rounded-lg">
+                                class="rounded-lg w-full min-h-[400px] md:min-h-[500px]"
+                                style="max-width: 100%; overflow: hidden;">
                             Caricamento…
                         </iframe>
                     </div>
@@ -5104,5 +5105,5 @@ VALUTA E PAGAMENTI:
             }, 100);
         }
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d06162d6571498',t:'MTc1NDgzODIxMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d065b8e197e898',t:'MTc1NDgzODM4OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
